--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 757422152680079400
 textchannel = 757422373287886948
 ladderchannel = 
 jungsanchannel = 
