--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 759782013955473408
 textchannel = 759781978261159946
 ladderchannel = 
 jungsanchannel = 
