--- a/notice.ini
+++ b/notice.ini
@@ -1,1 +1,45 @@
-일상디코봇 짱!
+건의사항 문의사항의경우 https://open.kakao.com/o/st4LYEfc 로 남겨주시면 확인 후 답변드리겠습니다.
+
+* 길드던전 및 수련의 섬 :　매주 수요일 21:30 그림자이벤트 종료 후 길던, 수련의 섬 진행
+
+* 현재 서버 구도 : 1,3,4 vs 5,2
+
+* 성물,난투,월보 디스코드 : https://discord.gg/mHepasU 많은 참여 부탁드립니다.
+
+* 길드제작 : 각 제작항목 마다 5개씩 등록 가능합니다.
+길드제작 3개씩 총 15개 등록 해주세요.
+참고) 영약의 경우 1개라도 등록 안해주신 분에게는 형평성에 맞게 배분 안해드려용！！
+참고) 침묵의 경우 투력 순으로 한 개씩 배분 되며, 고투력 분이 찬가를 가지고 있는 경우 끼고 있던 찬가를 저렴하게 밑으로 내리는 순으로 해서 진행 할 예정입니다.
+
+1. 불독 길드는 가족같은 분위기를 지향 합니다 접속 시 인사는 꼭 해주세요!! ex) 안녕하세요 28. 방가방가 28
+
+2. 여러 서버에서 한 신구로 모이게 된 만큼 서로의 정보를 파악 할 수 있도록 길드소개를 수정 부탁드립니다 !!
+
+3. 친목 길드인 만큼 상호간의 호칭에 님은 빼겠습니다. 나이 서로 숙지하시고 형, 오빠, 누나 ,언니, 동생으로 가족 같은 분위기를 생성하되 선은 지켜주세요.
+
+4. 불독은 비매, 욕설, PK, 월챗을 하지 않습니다. 월드채팅의 경우 좋은 소리 좋은 말은 괜찮습니다만 월드채팅의 특성상 말이 많으면 불화가 생기기에 사전 차단 하고자 합니다.
+
+5. V4의 맵은 넓고 네임드는 많습니다. 네임드 독식은 자유이나, 발견 시 식구들을 위하여 공유 부탁 드립니다. 네임드 발견자 및 띵을 보신 분에게 선타를 양보합니다.
+ex) 네임드 발견자 길챗 공유 시 잡으러 가는 인원은 가고 있다는 채팅을 해주세요.
+도착 후 네임드 발견자 및 띵 보신분이 선타를 친 후 신호를 주시면 자유롭게 잡아주세요.
+
+6. 비슷한 닉네임 혹은 애칭의 경우 헷갈릴 요지가 있으니 카톡 대화명은 아래와 같이 통일합니다.
+닉네임/직업/나이/지역 ex)개룰리/매지션/28/부산
+
+7. 길드 내판의 경우 가격책정은 개인의 자유입니다. 하지만 너무 저렴하게 주는 경우 분란의 소지가 있을 수 있으니, 저렴한 가격은 귓으로 조용히 진행 부탁드리겠습니다.
+
+8. 단합을 위하여 ,혹은 공지사항 등 여러 가지 이유로 디코 및 단톡은 기왕이면 입장 요청드립니다 !
+
+- 끝 -
+
+
+1. 길드 오픈톡명 :　V4불독 , 참여코드 : 00700
+
+2. 길드 디코 주소
+https://discord.gg/8yWqezQ
+
+3. fastPing (PC 게임시 공속 항상)
+https://drive.google.com/file/d/1ladrLGaRLHhPGuDhcopY1_HtZ-oiB9m0/view?usp=sharing
+
+4. Sandboxie ( 멀티 계정 실행 )
+https://drive.google.com/file/d/1ZLVADM5MU25GSNSnYqi8rW2cMxv4LeSE/view?usp=sharing
